fixed server bar spacing

--- a/react-app/src/components/ServerNavBar/ServerNavBar.css
+++ b/react-app/src/components/ServerNavBar/ServerNavBar.css
@@ -1,6 +1,6 @@
 .all-content-container {
     display: flex;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     width: 100%;
     margin: 0;
     padding: 0;
@@ -46,7 +46,7 @@
 
 .home-main-content-wrapper {
     width: 100%;
-    margin: 20px;
+    /* margin: 20px; */
     display: flex;
     flex-direction: column;
     justify-content: center;
