--- a/react-app/src/components/ServersList/ServersList.css
+++ b/react-app/src/components/ServersList/ServersList.css
@@ -96,7 +96,7 @@
 }
 
 .server-list {
-    width: 8%;
+    /* width: 8%; */
     min-width: 70px;
     /* max-width: 70px; */
 }
